--- a/GitHub_tasks/Регрессионный анализ/Регрессионный анализ.Rmd
+++ b/GitHub_tasks/Регрессионный анализ/Регрессионный анализ.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
 library(readxl)
 library(broom)
@@ -15,6 +15,7 @@ library(sandwich)
 library(flextable)
 library(gtsummary)
 library(car)
+library(ggResidpanel)
 ```
 
 ```{r}
@@ -71,38 +72,40 @@ Total_activity <- activity %>%
 max(Total_activity$Activity)
 
 #Максимальное значение - 90 часов в неделю. Мимнимальное - 0 часов
-#Пусть 0-20 часов - Низкая активность
- #     20-60 часов - Средняя активность
- #     60-90 часов - Высокая активность
+#Пусть 0.1-15 часов - Низкая активность
+ #     15 - 30 часов - Средняя активность
+ #     30-90 часов - Высокая активность
       
 Total_activity <- Total_activity %>%
   mutate(Categories = case_when(Activity == 0 ~ 'Without_activity',
-                                between(Activity, 0.1, 15) ~ 'Low_activity',
-                                between(Activity, 15, 30) ~ 'Middle_activity',
-                                between(Activity, 30, 90) ~ 'Hight_activity'))
+                                dplyr::between(Activity, 0.1, 15) ~ 'Low_activity',
+                                dplyr::between(Activity, 15, 30) ~ 'Middle_activity',
+                                dplyr::between(Activity, 30, 90) ~ 'Hight_activity'))
 
 ```
 #Задание 2. Ковариаты
 Согласно представленному DAG есть следующие показатели:
 -раса (конфаундер, так как влияет и зависимую переменную - гликированный гемоглобин,так и на независимые переменные)
 -пол (конфаундер)
--Образование (влияет только на независимую переменную)
--Возраст (влияет только на независимую переменную)
--Курение (влияет только на зависимую переменную, )
+-Образование (конфаундер)
+-Возраст (конфаундер)
+-Курение (конфаундер)
 -Семейный доход (влияет только на независимую переменную, конфаундер)
 -Сопутствующие заболевания (конфаундер)
 -Индекс массы тела (медиатор - физическая активность влияет на гликированный геоглобин посредством индекса массы тела)
--Кровяное давление (коллайдер - на давление оказывает влияние как гликированный геомглобин, так и наличие физической нагрзки)
--Лечение диабета (влияет только на независимую переменную)
+-Кровяное давление (коллайдер - на давление оказывает влияние как гликированный геомглобин, так и наличие физической нагрузки)
+-Лечение диабета (коллайдер)
 -Семейное положение (нейтральная переменная)
 
-В качестве ковариат для использования в модели были выбраны перменные, которые могут оказывать влияние на гликированный геомглобин:
+В качестве ковариат для использования в модели были выбраны перменные, которые могут оказывать влияние на гликированный геомглобин (не включаем коллайдеры и медиаторы):
 -Раса
 -Пол
+-образование
+-возраст
+-семейный доход
 -Сопутствующие заболевания
 -Курение
--Индекс массы тела
--Кровяное давление
+
 
 Согласно спецификации:
 ```{r}
@@ -115,9 +118,27 @@ covariates <- data %>%
                           RIDRETH3 == 7 ~ "OtherRace",),
          Sex = case_when(RIAGENDR == 1 ~  "Male",
                          RIAGENDR == 2 ~ "Female"), 
+         Age = RIDAGEYR,
+         Education = case_when(DMDEDUC2 == 1 ~ 'Less than 9th grade',
+                               DMDEDUC2 == 2 ~'9-11th grade',
+                               DMDEDUC2 == 3 ~ 'High school graduate',
+                               DMDEDUC2 == 4 ~ 'College or AA degree',
+                               DMDEDUC2 == 5 ~ 'College graduate'),
          SmokingStatus = case_when(SMQ040 == 1 ~ "Every day",
                                    SMQ040 == 2 ~ "Some days",
                                    SMQ040 == 3 ~ "Not at all"),
+         FamilyIncome = case_when(INDFMIN2 == 1 ~ "$ 0 to $ 4,999",
+                                  INDFMIN2 == 2 ~ "$ 5,000 to $ 9,999",
+                                  INDFMIN2 == 3 ~ "$10,000 to $14,999",
+                                  INDFMIN2 == 4 ~ "$15,000 to $19,999",
+                                  INDFMIN2 == 5 ~ "$20,000 to $24,999",
+                                  INDFMIN2 == 6 ~  "$25,000 to $34,999",
+                                  INDFMIN2 == 7 ~ "$35,000 to $44,999",
+                                  INDFMIN2 == 8 ~ "$45,000 to $54,999",
+                                  INDFMIN2 == 9 ~  "$55,000 to $64,999",
+                                  INDFMIN2 == 10 ~ "$65,000 to $74,999",
+                                  INDFMIN2 == 11 ~ "$75,000 to $99,999",
+                                  INDFMIN2 == 12 ~ "$100,000 and Over"),
          Asthma = factor(ifelse(MCQ010 == 1 | MCQ035 == 1, 1, 2), levels = c(1,2), labels = c("Yes", "No")),
          Heart_disease = factor(ifelse(MCQ160C == 1 | MCQ160B == 1 | MCQ160E == 1, 1, 2), levels = c(1,2), labels = c("Yes", "No")), 
          Stroke = case_when(MCQ160F == 1 ~ "Yes",
@@ -127,23 +148,24 @@ covariates <- data %>%
                           MCQ160O == 2 ~ "No"),
          Cancer = case_when(MCQ220 == 1 ~ "Yes",
                             MCQ220 == 2 ~ "No")) %>%
-  select(c(SEQN, Race, Sex, SmokingStatus, Asthma, Heart_disease, Stroke, ThyroidDisease, COPD, Cancer, LBXGH))
+  select(c(SEQN, Race, FamilyIncome, Age, Sex, SmokingStatus, Asthma, Heart_disease, Stroke, ThyroidDisease, COPD, Cancer, LBXGH))
 ```
 
 
-Объединим два датасета с ковариатами, физической нагрузки и добваим зависимую переменнную - гликированный геомглобин (для дальнейшей работы)
+Объединим два датасета с ковариатами, физической нагрузки и добавим зависимую переменнную - гликированный геомглобин (для дальнейшей работы)
 ```{r}
 ready_data <- left_join(Total_activity, covariates, by = 'SEQN')
 
 ready_data$LBXGH <- gsub(",", "\\.", ready_data$LBXGH)
 
 ready_data <- ready_data %>%
-  mutate(Hb = as.numeric(LBXGH))
+  mutate(Hb = as.numeric(LBXGH)) %>%
+  select(!LBXGH)
 ```
 
 
 #Задание 3. Эксплораторный анализ
-Для того, чтобы лучше понимать перемннные по физ нагрузкеи и полученную общую переменную, которая была фактически произвольно разделена на подгруппы, нужно посмотреть распределение
+Для того, чтобы лучше понимать переменнные по физ нагрузкеи и полученную общую переменную, которая была фактически произвольно разделена на подгруппы, нужно посмотреть распределение
 ```{r}
 ready_data|>
   ggplot() +
@@ -168,6 +190,91 @@ plot_1 |>
   theme_bw()
 
 ```
+Распределение не является нормальным, смещено влево. Значений с низким гликированным гемоглобином намного больше, чем с высоким.
+
+#Посмотрим, есть ли корреляции и как распредлеяется физическая нагрузка для категориальных переменных
+```{r}
+ready_data %>%
+ggplot(aes(y = Hb, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Rate of Hb") + 
+  geom_smooth(method = 'lm') +
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Age, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Age") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Sex, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Sex") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Race, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Race") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = SmokingStatus, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Smoking Status") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Asthma, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Asthma") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Heart_disease, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Heart disease") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Stroke, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Stroke") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = ThyroidDisease, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Thyroid Disease") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = COPD, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "COPD") + 
+  theme_bw()
+
+ready_data %>%
+ggplot(aes(y = Cancer, x = Activity)) +
+  geom_point(size = 1.1) +
+  labs(x = "Activity", 
+      y = "Cancer") + 
+  theme_bw()
+
+```
+
+
 ```{r}
 tbl_summary(
   ready_data, include = -c(SEQN), 
@@ -180,10 +287,8 @@ tbl_summary(
 ```
 
 
-Распределение не является нормалльным, смещено влево. Значений с низким гликированным гемоглобином намного больше, чем с высоким. 
-
 #Задание 4. Регрессионный анализ
-##Без ковариат
+##Без ковариат (для категорий физ активности)
 ```{r}
 
 model_1 <- lm(Hb ~ Categories, ready_data)
@@ -203,17 +308,55 @@ broom::tidy(model_1, conf.int = TRUE)
 
 ```
 
-Видно, что для низкой и средней физической активности результаты статистически незначимы. Есть стат значимость для пациентов без какой-либо активности. То есть при остутствии физической активности, увеличивается уровень гликированного геомглобина. R2 = 0.02 - модель очень плохо объясняет данные. Есть некоторое влияние физ нагрузки на уровень гликированного гемоглобина, но он не описывается линейной моделью, то есть, возможно, от количество часов физической активности не влияет на уровень гликированного гемоглобина
-
-Также для Intercept t-критерий отличен от 0 и ДИ интервал не включет 0, следовательно, переменная (физ нагрузка) оказывает статистически значимое влияние на зависимую переменную.
-Также для переменной с отстутвие физ нагрузки ДИ не включает 0 и t-критерий отличен от 0, но тут видно, что стат значимость не является сильной.
+Видно, что для низкой и средней физической активности результаты статистически незначимы. Есть стат значимость для пациентов без какой-либо активности. То есть при остутствии физической активности, увеличивается уровень гликированного геомглобина. R2 = 0.02 - модель очень плохо объясняет данные. Есть некоторое влияние физ нагрузки на уровень гликированного гемоглобина (p-value =  0.0339 для CategoriesWithout_activity)
 
 По полученным графикам можно сказать, что распределение отлично от нормального по QQ-plot. Остальное оценить не можем, так как категориальная переменная.
 
-##С ковариатами
+
+#С переменной activity (без деления на категории)
+```{r}
+model_1_q <- lm(Hb ~ Activity, ready_data)
+
+par(mfrow = c(2, 2))
+
+plot(model_1_q)
+
+model_1_q
+
+coef(model_1_q)
+coefci(model_1_q)
+summary(model_1_q)
+
+#Точечные и интервальные оценки
+broom::tidy(model_1_q, conf.int = TRUE)
+```
+По p-value можно сказать, что нет значимого эффекта физ активности на уровень гемоглобина. Но по графику scale-location видно, что образуется "рукав". Это говорит о гетероскедастичности и возможной нелинейной зависимости. О нелинейности так же говорят другие графики.
+
+R2 равен 0.00027, => плохая модель
+
+#Сделаем поправку на гетероскедастичность
+```{r}
+broom::tidy(coeftest(model_1_q, vcov. = vcovHC, type = "HC1"), conf.int = TRUE)%>%
+  mutate(across(where(is.numeric), ~round(., 6)))%>%flextable::flextable()
+
+```
+
+
+#Поправка на гетероскедастичность и линейность (по распредлению гемоглобина от физ нагрузки допустим, что функция квадратичная)
+```{r}
+model_1_1 <- lm(Hb ~ Activity+I(Activity^2), data = ready_data) 
+summary(model_1_1)
+
+coeftest(model_1_1, vcov. = vcovHC, type = "HC1")
+
+```
+R2 значительно увеличился и стал 0.013. При этом влияние активности на уровень гликированного гемолглобина стало значимым. p-value < 0,05 (0,002)
+
+
+##Построим модель с ковариатами (для категорий физ нагрузки)
 ```{r}
 model_2 <- lm(Hb ~ Categories + 
-               Sex + Race + SmokingStatus + Asthma + Heart_disease + Stroke + ThyroidDisease + COPD + Cancer, 
+               Sex + Age + FamilyIncome + Race + SmokingStatus + Asthma + Heart_disease + Stroke + ThyroidDisease + COPD + Cancer, 
              ready_data)
 
 par(mfrow = c(2, 2))
@@ -226,17 +369,68 @@ coef(model_2)
 summary(model_2)
 
 #Точечные и интервальные оценки
-broom::tidy(model_1, conf.int = TRUE)
+broom::tidy(model_2, conf.int = TRUE) 
 ```
-При добавлении в модель ковариат R2 немного увеличился, стал 0.11. При этом значимо влияет на гликированный геомоглобин только расса (а именно Non-HispanicWhite), сердечные заболевания, опухолевые заболевания и инсульт(ДИ не включает 0).
+При добавлении в модель ковариат R2 увеличился, стал 0.15. При этом значимо влияет на гликированный геомоглобин расса (а именно Non-HispanicWhite, RaceOtherHispanic,RaceOtherRace), возраст, сердечные заболевания и инсульт (ДИ не включает 0).
 
-t-критерий для Intercept уменьшился, что говорит о снижении влияния на зависимую переменную в связи с включением в модель ковариат, также влияющих на гликированный гемоглобин.
+По полученным графикам можно также сказать, что распределение отлично от нормального по QQ-plot. Также присутствует некая гетероскедастичность (нелинейная зависимость). Есть выбросы. Разброс остатков вокруг оценки условного мат ожидания зависимой переменной говорит о нелинейности модели или наличие выбросов.
 
-По полученным графикам можно также сказать, что распределение отлично от нормального по QQ-plot. Также присутствует некая гетероскедастичность (нелинейная зависимость). Есть выбросы. Разброс остатков вокруг оценки условного мат ожидания зависимой перменной говорит о нелинейности можели или наличие выбросов.
+#Оценим распределение остатков 
+```{r}
+resid_xpanel(model_2)
+```
 
+#поправка на гетероскедастичность
+```{r}
+coeftest(model_2, vcov. = vcovHC, type = "HC1")
+```
+
+С поправкой на гетероскедастичность значимость факторов на гемоглобин немного изменилась изменилась. Но так же остались значимыми: возраст, раса, заболевания сердца
+
+#С ковариатами (без деления на категории, количественная переменная activity)
+```{r}
+model_2_2 <- lm(Hb ~ Activity + 
+               Sex + Race + Age + FamilyIncome + SmokingStatus + Asthma + Heart_disease + Stroke + ThyroidDisease + COPD + Cancer,
+             ready_data)
+
+par(mfrow = c(2, 2))
+
+plot(model_2_2)
+
+model_2_2
+
+coef(model_2_2)
+summary(model_2_2)
+
+#Точечные и интервальные оценки
+broom::tidy(model_2_2, conf.int = TRUE) 
+```
+
+```{r}
+resid_xpanel(model_2_2)
+```
+Видно, что для переменной Activity распределение остатков неравномерно, образуется "рукав", => нелинейная зависимость (возможно, квадратичная функция зависимости)
+
+
+#С поправкой на гетероскедастичность
+```{r}
+model_2_3 <- lm(Hb ~ Activity + Sex + FamilyIncome + Race + SmokingStatus + Asthma + Heart_disease + Stroke + ThyroidDisease + COPD + Cancer,, data = ready_data) 
+summary(model_2_3)
+```
+#С поправкой на гетероскедастичность и нелинейность
+```{r}
+model_2_4 <- lm(Hb ~ Activity+I(Activity^2) + Sex + FamilyIncome + Race + SmokingStatus + Asthma + Heart_disease + Stroke + ThyroidDisease + COPD + Cancer, data = ready_data) 
+summary(model_2_4)
+
+coeftest(model_2_4, vcov. = vcovHC, type = "HC1")
+```
+
+R2 равен 0,12, что немного меньше, чем для категориальной переменнной физ нагрузки. При этом во всех случаях факторы, влияющие на уровень гликированного гемоглобина, оказываются примерно те же самые: возраст, раса, заболевания сердца, наличие рака. При использовании нелинейной зависимости для переменной Activity - переменная станвится значимой по p-value.
 
 #Задание 5. Точеченая и интервальная оценка
-В задании 4
+Для модели без ковариат (с категориальной переменной Activity) p-value < 0,05 только для категории людей без физ нагрузки. ДИ не включает 0 (0,022 ; 0,55). Для остальных категорий физ нагрузки p-value > 0,05 (ДИ включает 0), что говорит о том, что продолжительность физ нагрузки не влияет на уровень гликированного гемоглобина, но влияет сам факт присутствия физ нагрузки. При этом R2 данной модели был 0,02.
+
+Также была построена модель с ковариатами. При включении ковариат R2 увеличился и стал равен 0,15. Для модели с ковариатами (с категориальной переменной Activity) p-value < 0,05 для всех категорий. ДИ включает 0. 
 
 #Задание 6
 
@@ -256,7 +450,7 @@ cor.test(ready_data$Hb[ready_data$Hb > 9], ready_data$Activity[ready_data$Hb > 9
 
 #Задание 7
 ```{r}
-model_sex <- lm(Hb ~ Categories*Sex, ready_data)
+model_sex <- lm(Hb ~ Categories*Sex + FamilyIncome + Race + SmokingStatus + Asthma + Heart_disease + Stroke + ThyroidDisease + COPD + Cancer , ready_data)
 
 summary(model_sex)
 
@@ -266,5 +460,10 @@ broom::tidy(model_sex, conf.int = TRUE)
 
 
 #Задание 8
-Полученные результаты не соответствуют первоначальной гипотезе. Так как не получилось доказать, что при увеличении физической активности снижается уровень гликированного гемоглобина. Можно сказать, что наличие в принципе физической активности статистичеси значимо влияет на уровень гликированного геомоглобина (это видно по Intercept.), но нет линейной зависимости между физической нагрузкой (категориями) и уровнем гликированного гемоглобина.Также не было обнаружено корреляции между этими параметрами. 
-При использовании модели с ковариатами увеличилось значение Intercept, R2 и отсутствие физ нагрузки стало так же статистически незначимым, то есть какая-то из ковариат вносит вклад. Также увеличилось занчение F-статистики. То есть модель стала немного лучше описывать даннные.
+Полученные результаты не соответствуют первоначальной гипотезе. Так как не получилось доказать, что при увеличении физической активности снижается уровень гликированного гемоглобина. Можно сказать, что наличие в принципе физической активности статистичеси значимо влияет на уровень гликированного геомоглобина. 
+
+Для модели без ковариат (с категориальной переменной Activity) p-value < 0,05 только для категории людей без физ нагрузки. ДИ не включает 0 (0,022 ; 0,55). Для остальных категорий физ нагрузки p-value > 0,05 (ДИ включает 0), что говорит о том, что продолжительность физ нагрузки не влияет на уровень гликированного гемоглобина, но влияет сам факт присутствия физ нагрузки. При этом R2 данной модели был 0,02.
+
+Также была построена модель с ковариатами. При включении ковариат R2 стал равен 0,15. Были определены факторы, влияющие на уровень гликированного гемоглобина. Но при этом уровень физ нагрузки значимо не влияет. Такая же ситуация наблюдалась при поправке на гетероскедастичность. 
+Кроме того проверялась модель для переменной физ активности (количественной, без деления на категории). Переменная физ активности не была значимой, но при использовании квадратичной функции (предполагаем, что зависимость гемоглобин-физ нагрузка нелинейна) фактор физ нагрузки становится значимым и увеличивается R2.
+
